--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Burgers [B]</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <img src="" alt="" />
+      <h3>Smart</h3>
+      <h3>POS</h3>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <h4>Other</h4>
+      <li></li>
+      <li></li>
+    </nav>
     <main></main>
   </body>
 </html>
