--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
       <li></li>
       <li></li>
     </nav>
-    <main></main>
+    <main>
+      <div class="size"></div>
+      <div class="size"></div>
+      <div class="size"></div>
+      <div class="size"></div>
+      <div class="size"></div>
+      <div class="size"></div>
+    </main>
   </body>
 </html>
