better html and started making css

--- a/index.html
+++ b/index.html
@@ -4,29 +4,157 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Burgers [B]</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <img src="" alt="" />
-      <h3>Smart</h3>
-      <h3>POS</h3>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <h4>Other</h4>
-      <li></li>
-      <li></li>
-    </nav>
-    <main>
-      <div class="size"></div>
-      <div class="size"></div>
-      <div class="size"></div>
-      <div class="size"></div>
-      <div class="size"></div>
-      <div class="size"></div>
-    </main>
+    <div class="whitescreen">
+      <nav>
+        <div class="logo">
+          <div class="icon">
+            <img src="Assets/icon.png" alt="icon" />
+          </div>
+          <div class="logo-text">
+            <h3>Smart <span class="color1">POS</span></h3>
+          </div>
+        </div>
+
+        <div class="menu">
+          <ul>
+            <li>
+              <a href="#">
+                <img class="iconh" src="Assets/icon.png" alt="" />
+                Dashboard
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <img class="iconh" src="Assets/icon.png" alt="" />
+                Food & Drinks
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <img class="iconh" src="Assets/icon.png" alt="" />
+                Messages
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <img class="iconh" src="Assets/icon.png" alt="" />
+                Bills
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <img class="iconh" src="Assets/icon.png" alt="" />
+                Settings
+              </a>
+            </li>
+
+            <h4>Other</h4>
+
+            <li>
+              <a href="#">
+                <img class="iconh" src="Assets/icon.png" alt="" />
+                Notifications
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <img class="iconh" src="Assets/icon.png" alt="" />
+                Support
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="user">
+          <div class="boxuser">
+            <img src="Assets/icon.png" alt="" />
+            <div class="user-info">
+              <h4>Theresa Webb</h4>
+              <p>Waiter - 4h 56m</p>
+            </div>
+            <button>Open profile</button>
+          </div>
+        </div>
+      </nav>
+      <p>@ 2020 SmartPOS App</p>
+
+      <main>
+        <div class="bar"></div>
+
+        <div class="content">
+          <header class="MainText">
+            <h1>Burgers <span>🍔</span></h1>
+            <input type="text" placeholder="Search..." />
+          </header>
+
+          <div class="products">
+            <div class="product">
+              <img src="Assets/icon.png" alt="" />
+              <div class="burger">
+                <h3>Cheeseburger</h3>
+                <p>150 g</p>
+                <span class="price">$3.50</span>
+              </div>
+            </div>
+
+            <div class="product">
+              <img src="Assets/icon.png" alt="" />
+              <div class="burger">
+                <h3>Chicken-Deluxe</h3>
+                <p>240 g</p>
+                <span class="price">$4.25</span>
+              </div>
+            </div>
+
+            <div class="product">
+              <img src="Assets/icon.png" alt="" />
+              <div class="burger">
+                <h3>Hamburger</h3>
+                <p>320 g</p>
+                <span class="price">$4.50</span>
+              </div>
+            </div>
+
+            <div class="product">
+              <img src="Assets/icon.png" alt="" />
+              <div class="burger">
+                <h3>Big John</h3>
+                <p>650 g</p>
+                <span class="price">$5.99</span>
+              </div>
+            </div>
+
+            <div class="product">
+              <img src="Assets/icon.png" alt="" />
+              <div class="burger">
+                <h3>Spicy Chicken</h3>
+                <p>340 g</p>
+                <span class="price">$4.75</span>
+              </div>
+            </div>
+
+            <div class="product">
+              <img src="Assets/icon.png" alt="" />
+              <div class="burger">
+                <h3>Superstars</h3>
+                <p>250 g</p>
+                <span class="price">$3.99</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <div class="tlo"></div>
+    </div>
   </body>
 </html>
