projekt chyba zrobiony

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Burgers [B]</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://necolas.github.io/normalize.css/7.0.0/normalize.css "
+    />
   </head>
   <body>
     <div class="whitescreen">
@@ -77,20 +81,21 @@
         <div class="user">
           <div class="boxuser">
             <img src="Assets/icon.png" alt="" />
-            <div class="user-info">
+            <div class="infousera">
               <h4>Theresa Webb</h4>
               <p>Waiter - 4h 56m</p>
             </div>
             <button>Open profile</button>
+            <p>@ 2020 SmartPOS App</p>
           </div>
         </div>
       </nav>
-      <p>@ 2020 SmartPOS App</p>
-
       <main>
-        <div class="bar"></div>
+        <div class="bar">
+          <h2>Food & Drinks > <span>Burgers</span></h2>
+        </div>
 
-        <div class="content">
+        <div class="Kontekst">
           <header class="MainText">
             <h1>Burgers <span>🍔</span></h1>
             <input type="text" placeholder="Search..." />
@@ -98,7 +103,7 @@
 
           <div class="products">
             <div class="product">
-              <img src="Assets/icon.png" alt="" />
+              <img src="Assets/burger.jpg" alt="" />
               <div class="burger">
                 <h3>Cheeseburger</h3>
                 <p>150 g</p>
@@ -107,7 +112,7 @@
             </div>
 
             <div class="product">
-              <img src="Assets/icon.png" alt="" />
+              <img src="Assets/burger.jpg" alt="" />
               <div class="burger">
                 <h3>Chicken-Deluxe</h3>
                 <p>240 g</p>
@@ -116,7 +121,7 @@
             </div>
 
             <div class="product">
-              <img src="Assets/icon.png" alt="" />
+              <img src="Assets/burger.jpg" alt="" />
               <div class="burger">
                 <h3>Hamburger</h3>
                 <p>320 g</p>
@@ -125,7 +130,7 @@
             </div>
 
             <div class="product">
-              <img src="Assets/icon.png" alt="" />
+              <img src="Assets/burger.jpg" alt="" />
               <div class="burger">
                 <h3>Big John</h3>
                 <p>650 g</p>
@@ -134,7 +139,7 @@
             </div>
 
             <div class="product">
-              <img src="Assets/icon.png" alt="" />
+              <img src="Assets/burger.jpg" alt="" />
               <div class="burger">
                 <h3>Spicy Chicken</h3>
                 <p>340 g</p>
@@ -143,7 +148,7 @@
             </div>
 
             <div class="product">
-              <img src="Assets/icon.png" alt="" />
+              <img src="Assets/burger.jpg" alt="" />
               <div class="burger">
                 <h3>Superstars</h3>
                 <p>250 g</p>
@@ -157,4 +162,5 @@
       <div class="tlo"></div>
     </div>
   </body>
+  <script src="./button.js"></script>
 </html>
